# jobs-lab

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
apps/: __init__.py
apps/api/: Dockerfile  dependencies.py  main.py  orm.py  repository.py  store.py  telemetry.py
apps/worker/: main.py  telemetry.py
deploy/docker-compose/: compose.yml  otel-collector.yml  prometheus.yml
deploy/docker-compose/grafana/dashboards/: jobs-lab-overview.json
deploy/docker-compose/grafana/provisioning/dashboards/: jobs-lab.yml
deploy/k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
deploy/k8s/overlays/local/: configmap.yaml  kustomization.yaml
docs/: gotchas.md
migrations/: env.py
migrations/versions/: 0001_create_jobs.py  0002_add_job_retry_fields.py  0003_add_job_trace_context.py
tests/: test_api.py  test_queue.py  test_trace_context.py  test_worker.py
