[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "jobs-lab"
version = "0.1.0"
description = "FastAPI background job learning project"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13,<2",
    "asyncpg>=0.29,<1",
    "fastapi>=0.115,<1.0",
    "pydantic>=2,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8,<9",
    "ruff>=0.6,<1.0",
]

[tool.setuptools.packages.find]
include = ["apps*", "packages*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
